<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectUI</string>
    <string name="some_text">Select Games</string>
    <string name="some_hint">  Type here to filter&#8230; </string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Enter Height</string>
    <string name="password_text">Enter Weight</string>
    <string name="login_button">Next</string>
    <string name="Home">Main Menu</string>
    <string name="register_button">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_screen_title">Register</string>
    <string name="username_register_text">Enter Height:</string>
    <string name="password_register_text">Enter Weight:</string>
    <string name="confirm_password_register_text">Confirm Password:</string>
    <string name="email_register_text">Email:</string>
    <string name="done_button">Done</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="create_game_button">Create Game</string>
    <string name="go_to_game_button">Go To Game</string>
    <string name="friend_requests_button">Friend Requests</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="game_title_text">Game Title:</string>
    <string name="game_type_text">Game Type:</string>
    <string name="time_based_checkbox_text">Time Based</string>
    <string name="start_time_button">Start Date</string>
    <string name="start_date_text">yyyy-MM-dd</string>
    <string name="end_time_button">End Date</string>
    <string name="end_date_text">yyyy-MM-dd</string>
    <string name="calorie_based_checkbox_text">Calorie Based</string>
    <string name="desired_calories_text">Desired Number of Calories:</string>
    <string name="add_players_button">Add Players</string>
    <string name="play_button">Play</string>
    <string name="title_activity_add_players">AddPlayersActivity</string>
    <string name="title_activity_choose_game">ChooseGameActivity</string>
    <string name="title_activity_friend_requests">FriendRequestsActivity</string>
    <string name="welcome1">Welcome</string>
    <string name="welcome">Welcome</string>
    <string name="connectButton">Connect</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="paireddevices"> Pair Devices</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_Device_list">Device List</string>
    <string name="titile_activity_bluetoothchat"></string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="end_game_message">Congratulations! You have finished the game!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_id">170549759799075</string>
    <string name="send_request">Send Request</string>
    <string name="send_request1">Send Friend Request</string>
    <string name="Done">Done</string>
    <string name="title_activity_lose_game">LoseGameActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
