<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shoe"
    tools:context=".ChooseActivity" >

 
    <Button
        android:id="@+id/goToGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createGameButton"
        android:layout_centerVertical="true"
        android:text="@string/go_to_game_button" />

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goToGameButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/create_game_button" />

      <Button
          android:id="@+id/sendRequestButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/goToGameButton"
          android:layout_marginTop="28dp"
          android:gravity="center"
          android:text="@string/send_request1"
          android:textStyle="bold"
          android:visibility="visible" />

</RelativeLayout>
