<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shoe1"
    tools:context=".CreateGameActivity" >

    <TextView
        android:id="@+id/gameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="34dp"
        android:text="@string/game_title_text" />

    <EditText
        android:id="@+id/gameTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gameTitleTextView"
        android:layout_alignBottom="@+id/gameTitleTextView"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/gameTitleTextView"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/gameTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gameTitleTextView"
        android:layout_below="@+id/gameTitleEditText"
        android:layout_marginTop="18dp"
        android:text="@string/game_type_text" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/desiredCaloriesTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:text="@string/play_button" />

    <TextView
        android:id="@+id/desiredCaloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numberCaloriesEditText"
        android:layout_alignBottom="@+id/numberCaloriesEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/desired_calories_text" />

    <CheckBox
        android:id="@+id/calorieBasedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numberCaloriesEditText"
        android:layout_alignLeft="@+id/desiredCaloriesTextView"
        android:text="@string/calorie_based_checkbox_text" />

    <CheckBox
        android:id="@+id/timeBasedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/calorieBasedCheckBox"
        android:layout_below="@+id/gameTypeTextView"
        android:layout_marginTop="14dp"
        android:text="@string/time_based_checkbox_text" />

    <EditText
        android:id="@+id/numberCaloriesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playButton"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/desiredCaloriesTextView"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/hoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeBasedCheckBox"
        android:layout_below="@+id/timeBasedCheckBox"
        android:layout_marginTop="21dp"
        android:text="Hours: " />

    <TextView
        android:id="@+id/minutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hoursTextView"
        android:layout_centerVertical="true"
        android:text="Minutes: " />

    <EditText
        android:id="@+id/hoursEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hoursTextView"
        android:layout_alignBottom="@+id/hoursTextView"
        android:layout_toRightOf="@+id/minutesTextView"
        android:ems="10" 
        android:inputType="number"/>

    <EditText
        android:id="@+id/minutesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/hoursEditText"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>